Changed the path to the build folder